# api/controllers/registration.js
@@ -1,20 +1,22 @@
-"use strict";
+'use strict';
 
-var errs = require("restify-errors");
+var errs = require('restify-errors');
+var neighbours = require('../../db/neighbours');
 
 module.exports = {
-    createNeighbour: createNeighbour
+    addNeighbour: addNeighbour
 };
 
-function createNeighbour(req, res, next) {
-    let neighbourDetails = req.swagger.params.NeighbourDetails.value;
+function addNeighbour(req, res, next) {
+    let neighbour = req.swagger.params.Neighbour.value;
 
-    if (new RegExp(/[a-zA-Z]/).test(neighbourDetails.phone)) {
-        return next(new errs.InvalidContentError("phone can't be alphanumeric!"));
+    if (new RegExp(/[a-zA-Z]/).test(neighbour.phone)) {
+        return next(new errs.InvalidContentError('phone can\'t be alphanumeric!'));
     }
     
     //TODO: Add neighbour to DB
+    neighbours.add(neighbour);
 
-    res.send(201, {message: "Neighbour created!"});
+    res.send(201, {message: 'Neighbour added!'});
     return next();
 }
